--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FLUTE GRAPHICS</title>
     <style>
+    body{
+      background: url(img/recorder2.png) no-repeat 78% 20%; fixed;
+      background-size: 550px;
+    }
       h2{
         text-align:center;
       }
